overflow issuue resolved

--- a/style/index.css
+++ b/style/index.css
@@ -10,6 +10,7 @@
 /* Default body styling with fade in animation*/
 body{
 	height: 100%;
+	/* width: 100%; */
 	background-color: #222629;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	animation: fadeInAnimation ease 3s;
@@ -74,35 +75,33 @@ body::-webkit-scrollbar {
 .navbar {
     text-align: center;
 	background-color: var(--lightgray);
-	padding: 50px 0 50px;
+	padding: 30px 0 30px 0;
 	width: 100%;
 }
 nav {
 	position: relative;
+	text-align: center;
 }
 ul {
 	list-style-type: none;
-	float: left;
-	left: 50%;
-	position: relative;
+	text-align: center;
 }
 li {
 	margin: 0 30px;
-	float: left;
-	left: -50%;
 	position: relative;
+	display: inline-block;
 }
-.navbar a {
+.nav-wrapper a {
     font-size: 20px;
     text-decoration: none;
     color: black;
     padding: 20px;
 	text-transform: uppercase;
 }
-.nav-wrapper a:before,
-.nav-wrapper a:after {
+.nav-wrapper a::before,
+.nav-wrapper a::after {
 	content: "";
-	height: 1px;
+	height: 2px;
 	width: 0;
 	opacity: 0;
 	background-color: var(--blue);
@@ -110,7 +109,7 @@ li {
 	transition: all .5s;
 }
 
-.nav-wrapper a:before {
+.nav-wrapper a::before {
 	top: -3px;
 }
 
@@ -119,8 +118,8 @@ li {
 	right: 0;
 }
 
-.nav-wrapper a:hover:before,
-.nav-wrapper a:hover:after {
+.nav-wrapper a:hover::before,
+.nav-wrapper a:hover::after {
 	width: calc(100% + 20px);
 	opacity: 0.7;
 }
